--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "passport": "^0.6.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
-   
+     "engines": {
+    "node": ">=14 <15"
+  },
     "serve-favicon": "^2.5.0"
   }
 }
